# inferra

./: .gitignore  Dockerfile  README.md  analyze_project.py  demo.py  demo_app.py  docker-compose.yml  hit_live_demo.py  inferra_demo.py  live_demo_app.py  pharmasight_demo.py  pharmasight_test.db-shm  pharmasight_test.db-wal  pyproject.toml  report_html.py  requirements.txt  run_cybersec_instrumented.py  run_gsquant_instrumented.py  run_pharmasight_instrumented.py  run_planit_instrumented.py  run_realworld_instrumented.py  run_spendwise_instrumented.py  stress_test.py  strie_demo.py  test_multi_service.py
.agents/workflows/: demo.md
.github/workflows/: publish.yml  tests.yml
async_content_tracer/: __init__.py  context.py  graph.py  http_propagator.py  tracer.py
benchmarks/: __init__.py  bench_correlation.py  bench_indexing.py  bench_llm.py
docs/: ARCHITECTURE.md
inferra/: __init__.py  __main__.py  agents.py  api.py  auto_instrument.py  aws_integration.py  config_indexer.py  dependency_agent.py  embeddings.py  indexer.py  llm_agent.py  otlp_receiver.py  pr_generator.py  rag.py  rca_engine.py  security_agent.py  sql_indexer.py  static_tracer.py  storage.py  streaming.py  topology.py
inferra/parsers/: __init__.py  base.py  go_parser.py  java_parser.py  javascript_parser.py  ts_go_parser.py  ts_java_parser.py  ts_javascript_parser.py  ts_typescript_parser.py
tests/: test_context.py  test_graph.py  test_inferra.py  test_multi_stack.py  test_stress.py  test_tracer.py  test_v04_features.py
